--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -136,8 +136,13 @@
         {{/if}} {{!-- /tweet_id --}}
       </span>
       <span aria-hidden="true" style="
-        float:right;
-        margin-right: 10px;
+        {{#if rtl}}
+          float: left;
+          margin-left: 10px;
+        {{else}}
+          float: right;
+          margin-right: 10px;
+        {{/if}};
         position: relative;
         top: 13px;
         font-weight: 300;
