We can ask for browser permission to notify the user. If the user accepts we generate and endpoint and display it to the console.
This endpoint can be used to send notifications to the user. It needs to be saved in the database.

--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -91,7 +91,7 @@
       {{/if}} {{!-- /canSubscribeEmail --}}
       {{#if canSubscribeBrowser}}
           <div class="FormVertical-group">
-            <label><input type="checkbox" name="browser_notify" value="yes"> {{ s.notificationsBrowserGetNotified }}</label>
+            <label><input type="checkbox" id="browserSubscribe" name="browserSubscribe" value="yes"> {{ s.notificationsBrowserGetNotified }}</label>
           </div>
       {{/if}} {{!-- /canSubscribeBrowser --}}
       </form>
